--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,21 @@ body {
   padding: 0;
   margin: 0;
   color: #FF5D73;
+  background-color: black;
 }
 
+.container {
+  margin-left: 5em;
+  margin-right: 5em;
+  text-align: center;s
+}
+
+  /* TODO: appear loading and center, currently invisible */
+div#p5_loading {
+  font-size: 22px;
+  color: hotpink;
+  margin-left: windowWidth/2;
+}
 
 #audio_canvas {
   position: absolute;
@@ -18,6 +31,7 @@ body {
   /* margin-top: 300px; */
   /* display: inline-flex; */
 }
+
 
 a {
   background-color: white;
