--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,20 @@
-@import url('https://fonts.googleapis.com/css?family=Cabin|Monoton|Paytone+One');
-
 body {
   padding: 0;
   margin: 0;
   color: #FF5D73;
   background-color: black;
+  font-family: 'Monoton', cursive;
 }
 
 .container {
   margin-left: 5em;
   margin-right: 5em;
   text-align: center;s
+}
+
+h1 {
+  font-family: 'Monoton', cursive;
+  font-size: 3em;
 }
 
   /* TODO: appear loading and center, currently invisible */
